[package]
name = "stratadb-node"
version = "0.6.0"
edition = "2021"
description = "Node.js bindings for StrataDB"
license = "MIT"
repository = "https://github.com/strata-systems/strata-node"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "async", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Use git dependency during development
stratadb = { git = "https://github.com/strata-systems/strata-core", branch = "main" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
